for OSensorLibGeoTest add optickscore/SphereOfTransforms npy/NGLMExt methods to assist creation of a set of transforms to orient and position geometry instances around a sphere with reference directions all pointing at the global origin

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -69,6 +69,8 @@ set(SOURCES
     IntersectSDF.cc
     OpticksIdentity.cc
     OpticksShape.cc
+
+    SphereOfTransforms.cc
 )
 
 
@@ -143,6 +145,8 @@ set(HEADERS
     IntersectSDF.hh
     OpticksIdentity.hh
     OpticksShape.hh
+
+    SphereOfTransforms.hh
 )
 
 
