--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -45,6 +45,8 @@ set(TEST_SOURCES
     IntersectSDFTest.cc
     OpticksIdentityTest.cc
     OpticksShapeTest.cc
+
+    SphereOfTransformsTest.cc
 )
 
 
