avoid NULL SSys::hostname SSys::username that are collected within Opticks::init into m_parameters NMeta

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TEST_SOURCES
    STimesTest.cc
    SEnvTest.cc
    SSysTest.cc
+   SSys2Test.cc
    SStrTest.cc
    SPathTest.cc
    STrancheTest.cc
