change to signed integer packing of boundary and sensorIndex into slot x of photon flags, encapsulate photon flags quad using okc/OpticksPhotonFlags, use in GPho dumping

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES
     OpticksGenstep.cc
     Indexer.cc
 
+    OpticksPhotonFlags.cc
     OpticksFlags.cc
     OpticksAttrSeq.cc
     Opticks.cc
@@ -117,6 +118,7 @@ set(HEADERS
     Indexer.hh
 
     OpticksSwitches.h
+    OpticksPhotonFlags.hh
     OpticksFlags.hh
     OpticksAttrSeq.hh
     Opticks.hh
