--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -198,9 +198,10 @@ add_custom_command(
 add_custom_target(PythonGS ALL DEPENDS ${IGS} )
 
 
-
 set(CCFL ${CMAKE_CURRENT_SOURCE_DIR}/OpticksFlags.cc)
 set(PYJS ${CMAKE_CURRENT_BINARY_DIR}/OpticksFlags_Abbrev.json)
+set(CFGS  ${CMAKE_CURRENT_SOURCE_DIR}/DemoCfgTest.cfg)
+
 add_custom_command(
    OUTPUT 
          ${PYJS}
@@ -215,6 +216,7 @@ list(APPEND HEADERS
   ${IPH} 
   ${IGS} 
   ${PYJS}
+  ${CFGS}
 ) 
 
 
