review the curandState prep, move path setup to lowest level sysrap/SRngSpec for use from cudarap, add --rngseed --rngoffset options. Add alternate way to append to embedded Opticks commandline with G4Opticks::setEmbeddedCommandlineExtra, add notes on running with more photons than default docs/misc/running_with_more_photons.rst

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SOURCES
     SRand.cc
 
     SMockViz.cc
+    SRngSpec.cc
 ) 
 
 set(HEADERS
@@ -113,6 +114,7 @@ set(HEADERS
     SRand.hh
 
     SMockViz.hh
+    SRngSpec.hh
 )
 
 
