--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -10,7 +10,6 @@ find_package(Boost REQUIRED COMPONENTS ${COMPONENTS} )
 #set_target_properties(Boost::system  PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS ${COMPONENTS}")
 set_target_properties(Boost::system  PROPERTIES INTERFACE_FIND_PACKAGE_EXACT "REQUIRED COMPONENTS ${COMPONENTS}")
 
-
 # it is non-ideal that a separate check has to be made, but there is no asio component as header only ? 
 find_package(BoostAsio MODULE)  
 message(STATUS "BoostAsio_FOUND : ${BoostAsio_FOUND}")
@@ -167,6 +166,10 @@ set(TOXIC_HEADERS
 if(BoostAsio_FOUND)
     list(APPEND SOURCES BListenUDP.cc)
     list(APPEND HEADERS BListenUDP.hh)
+
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    find_package(Threads REQUIRED)
+
 endif()
 
 
@@ -200,6 +203,12 @@ target_link_libraries( ${name} PUBLIC
    Boost::filesystem
    Boost::regex
 )
+
+if(BoostAsio_FOUND)
+target_link_libraries(${name} PUBLIC Threads::Threads)  
+endif()
+
+
 if(UNIX AND NOT APPLE)
 target_link_libraries( ${name} PUBLIC ssl crypto )
 endif()
