start relocation of SensorLib from okg to okc, as it is needed at a lower level see notes/issues/OSensorLib_texid_missing.rst

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -72,6 +72,10 @@ set(SOURCES
     OpticksShape.cc
 
     SphereOfTransforms.cc
+
+    SensorLib.cc
+    MockSensorLib.cc
+    MockSensorAngularEfficiencyTable.cc
 )
 
 
@@ -149,6 +153,11 @@ set(HEADERS
     OpticksShape.hh
 
     SphereOfTransforms.hh
+
+    SensorLib.hh
+    MockSensorLib.hh
+    MockSensorAngularEfficiencyTable.hh 
+
 )
 
 
