avoid two tests fails from removing OpenMesh and NCSG::polygonize using NCSG::polygonize_bbox_placeholder

--- a/integration/tests/CMakeLists.txt
+++ b/integration/tests/CMakeLists.txt
@@ -60,6 +60,8 @@ Run without ctest::
 
    LV=box tboolean.sh --generateoverride 10000
 
+   LV=box tboolean.sh --generateoverride 10000 -D    # run under gdb 
+
 
 #]=]
 
