investigate OpticksEvent::reset memory management see notes/issues/OpticksRunTest_memory_reset_check.rst . disable the cfg4evt by default yielding a halving of memory usage but the trend when running thousands of events is still ramping up too much

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -53,12 +53,13 @@ set(TEST_SOURCES
     SensorLibTest.cc
     MockSensorAngularEfficiencyTableTest.cc
     MockSensorLibTest.cc
+    OpticksEventTest.cc
+    OpticksRunTest.cc
 )
 
 
 set(TEST_SOURCES_NOK 
 
-    OpticksEventTest.cc
 
     OpticksAppTest.cc
 
