adjust finding the XercesC used by G4persistency target to work with Geant4 1062 which adopts namespace Geant4::G4persistency

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(G4         REQUIRED MODULE)
 find_package(GGeo       REQUIRED CONFIG)   
 
 # just for X4GDMLWrite
+set(OpticksXercesC_VERBOSE ON)
 find_package(OpticksXercesC REQUIRED MODULE)
 
 
