new test cfg4/tests/CGDMLPropertyTest.cc shows the 1042 vs 1062 difference from same GDML : all prop vals zero with 1062

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -11,6 +11,8 @@ set(TEST_SOURCES
     CTestDetectorTest.cc
     CGDMLTest.cc
     CGDMLDetectorTest.cc
+    CGDMLPropertyTest.cc
+
     CGeometryTest.cc
     CG4Test.cc
     G4MaterialTest.cc
