simple static dumpers of Geant4 properties in CDump and X4Dump

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -146,6 +146,8 @@ set(SOURCES
     CStepping.cc
     CSteppingState.cc
     CStepStatus.cc
+
+    CDump.cc
 )
 
 set(HEADERS
@@ -261,6 +263,7 @@ set(HEADERS
     CRandomListener.hh
     CMixMaxRng.hh
 
+    CDump.hh
 )
 
 add_library(${name} SHARED  ${SOURCES})
