--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -49,6 +49,8 @@ set(TEST_SOURCES
     CGenstepSourceTest.cc
     C4FPEDetectionTest.cc
 
+    CDumpTest.cc
+
 )
 
 # generate targets for these, but dont add_test 
