fixes for g4_1070 including name order sorting of G4LogicalBorderSurfaceTable which has become a std::map, see notes/issues/g4_1070_G4LogicalBorderSurface_vector_to_map_problems.rst

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCES
     X4Gen.cc
     X4.cc
     X4Named.cc
+    X4NameOrder.cc
     X4Entity.cc
     X4SolidBase.cc
     X4Solid.cc
@@ -114,6 +115,7 @@ set(HEADERS
     X4Gen.hh
     X4.hh
     X4Named.hh
+    X4NameOrder.hh
     X4Entity.hh
     X4SolidBase.hh
     X4Solid.hh
