--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TEST_SOURCES
    SPathTest.cc
    STrancheTest.cc
    SVecTest.cc
+   SNameVecTest.cc
    SMapTest.cc
    SSeqTest.cc
    SProcTest.cc
