add float2x4 item handling for selection of the hiy buffer from the way buffer, analogously to the selection of hits from photons

--- a/thrustrap/tests/CMakeLists.txt
+++ b/thrustrap/tests/CMakeLists.txt
@@ -40,6 +40,7 @@ thrust_curand_printf.cu
 thrust_curand_printf_redirect.cu
 thrust_curand_printf_redirect2.cu
 TBuf4x4Test.cu
+TBuf2x4Test.cu
 
 )
 
