--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
    PythonImportTest.cc
    SOKConfTest.cc
    SArTest.cc
+   SArrTest.cc
    SArgsTest.cc
    STimesTest.cc
    SEnvTest.cc
