add simple propagate call level time/vm stamp collection for profile plots

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ set(TEST_SOURCES
     MockSensorAngularEfficiencyTableTest.cc
     MockSensorLibTest.cc
     OpticksEventTest.cc
+    OpticksEventLeakTest.cc
     OpticksRunTest.cc
 )
 
