--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -34,6 +34,8 @@ set(TEST_SOURCES
     G4BoxTest.cc
     G4ThreeVectorTest.cc
     CGenstepCollectorTest.cc
+    CGenstepCollectorLeakTest.cc
+    CGenstepCollectorLeak2Test.cc
     CInterpolationTest.cc
     OpRayleighTest.cc 
     CGROUPVELTest.cc 
