inconclusive leak investigations, but NPY::reserve items is promising to reduce resource usage by making the memory for genstep collection undergo less reallocs

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -38,7 +38,7 @@ set(TEST_SOURCES
    pLOG_MACRO_Test.cc
    PLOG_exename_Test.cc
     
-
+   reallocTest.cc
    OpticksCSGTest.cc
    hash_define_without_value.cc
    SDirectTest.cc 
