migrate with compile time WITH_WAY_BUFFER to runtime --way Opticks::isWayEnabled WAY_ENABLED preprocessor.py flag

--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -19,10 +19,10 @@ find_package(OpticksGeo REQUIRED CONFIG)
 find_package(ThrustRap  REQUIRED CONFIG )
 
 
-set(flags_AW +WITH_ANGULAR,+WITH_WAY_BUFFER)
-set(flags_Aw +WITH_ANGULAR,-WITH_WAY_BUFFER)
-set(flags_aW -WITH_ANGULAR,+WITH_WAY_BUFFER)
-set(flags_aw -WITH_ANGULAR,-WITH_WAY_BUFFER)
+set(flags_AW +WITH_ANGULAR,+WAY_ENABLED)
+set(flags_Aw +WITH_ANGULAR,-WAY_ENABLED)
+set(flags_aW -WITH_ANGULAR,+WAY_ENABLED)
+set(flags_aw -WITH_ANGULAR,-WAY_ENABLED)
 
 
 add_custom_command(
